--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -10,6 +10,16 @@ models:
 
   - name: stg_orders
     columns:
+      - name: customer_id
+        tests:
+          - not_null
+          - relationships:
+              to: ref('stg_customers')
+              field: customer_id
+      - name: order_id
+        tests:
+          - not_null
+          - unique
       - name: status
         tests: 
           - accepted_values:
