--- a/models/marts/core/core.yml
+++ b/models/marts/core/core.yml
@@ -3,7 +3,7 @@ version: 2
 models:
   - name: fct_orders
     columns:
-      - name: orderd_id
+      - name: order_id
         tests:
           - not_null
           - unique
