--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -18,8 +18,8 @@ sources:
       - name: orders
         loaded_at_field: _etl_loaded_at
         freshness:
-          warn_after: {count: 12, period: hour}
-          error_after: {count: 24, period: hour}
+          warn_after: {count: 1000, period: day}
+          error_after: {count: 5000, period: day}
         description: Raw orders data
         columns:
           - name: id
